# tapur_open

./: README.en  README.jp  データ定義書.doc
Tapur_Open/: BackupDialog.cpp  BackupDialog.h  CallStatus.cpp  CallStatus.h  CnvAudioDlg.cpp  CnvAudioDlg.h  CnvVideoDlg.cpp  CnvVideoDlg.h  FolderForm.cpp  FolderForm.h  Forcelib.h  Lang.sln  Lang.sln.old  Lang.suo.old  MainFrm.cpp  MainFrm.h  MainTool.cpp  MsgFolderNewDialog.cpp  MsgFolderNewDialog.h  MsgFolderRenameDialog.cpp  MsgFolderRenameDialog.h  MsgForm.cpp  MsgForm.h  MsgList.cpp  MsgList.h  MsgTree.cpp  MsgTree.h  RsfAudioDialog.cpp  RsfAudioDialog.h  RsfChatDialog.cpp  RsfChatDialog.h  RsfFolderNewDialog.cpp  RsfFolderNewDialog.h  RsfFolderRenameDialog.cpp  RsfFolderRenameDialog.h  RsfImgDialog.cpp  RsfImgDialog.h  (+55 more)
Tapur_Open/spconfig-0.1.3/: LICENSE  Makefile.in  README  configure  configure.in
Tapur_Open/spconfig-0.1.3/demo/: demo.conf  parse.bsc  parse.c  sample.include  test.c
Tapur_Open/spconfig-0.1.3/demo/other/: close0.conf  close1.conf  comments0.conf  comments1.conf  comments2.conf  comments3.conf  comments4.conf  notice.conf  quotes.conf
Tapur_Open/spconfig-0.1.3/doc/: API.tex  DEBUGGING  changeLog
Tapur_Open/spconfig-0.1.3/lib/: spconfig.lib  spconfiglib.bsc
Tapur_Open/spconfig-0.1.3/src/: debug.cpp  debug.h  find.cpp  load.cpp  mcd.cpp  mcd.h  mem.cpp  message.cpp  path.cpp  save.cpp  spconfig.cpp  spconfig.h  stack.cpp  stack.h  コピー ～ save.c
Tapur_Open/spconfig-0.1.3/vc/: parse.dsp  parse.plg  spconfiglib.dsp  spconfiglib.dsw  spconfiglib.opt  spconfiglib.plg  spconfiglib.sln  spconfiglib.vcproj
(+285 files in other folders)
